# PepperDB

./: .gitmodules  CLAUDE.md  Cargo.toml  README.md
.claude/skills/enable-pg-test/: SKILL.md
.claude/skills/rust-coding-style/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
src/: lib.rs  main.rs  txn.rs  types.rs  udfs.rs
src/access/: mod.rs  nbtree.rs
src/access/heap/: mod.rs  visibilitymap.rs
src/access/transam/: clog.rs  mod.rs  pg_control.rs  xlog.rs  xlogrecovery.rs
src/buffer_pool/: lru_k.rs  mod.rs
src/catalog/: bootstrap.rs  filenode_map.rs  mod.rs
src/executor/: mod.rs
src/parser/: mod.rs
src/server/: mod.rs
src/storage/: btree.rs  bufpage.rs  disk.rs  freespace.rs  fsm.rs  heap.rs  mod.rs  pg_control.rs  smgr.rs  vm.rs
src/wal/: mod.rs  record.rs  recovery.rs  writer.rs
tests/: regress.rs  regress_simple.rs
tests/common/: mod.rs
tests/regress/: expected  sql
tests/regress/expected/: alias.out  basics.out  boolean.out  case_expr.out  create_index.out  delete.out  distinct.out  drop_table.out  expressions.out  float.out  groupby.out  int2.out  int4.out  int8.out  join.out  limit.out  null.out  orderby.out  select.out  strings.out  subquery.out  text.out  update.out  vacuum.out
tests/regress/sql/: alias.sql  basics.sql  boolean.sql  case_expr.sql  create_index.sql  delete.sql  distinct.sql  drop_table.sql  expressions.sql  float.sql  groupby.sql  int2.sql  int4.sql  int8.sql  join.sql  limit.sql  null.sql  orderby.sql  select.sql  strings.sql  subquery.sql  text.sql  update.sql  (+1 more)
(+10 files in other folders)
